    - Added in marking for party members, alt right click -> Mark for party
    - Added in Highlighting to find things easier. alt right click -> Highlight or open Highlight manager 'm' -> 'g' and
    manually add in the res name
    - All of the managers should now sort their lists alphabetically
    - Fixed crash bug if you clicked in very specific areas of a window to move it
    - Changed how the list of combat opponents looks, your current target has its boxed highlighted in yellow now
    - Logging back into combat won't screw up keybinds now
    - Can switch between targets with scroll wheel
    - You won't click through the menugrid now if you miss a button
    - Crafting window now has a search built into it for crafting items only. Can toggle crafting window with 'm' -> 'r'
    - Show Animations now properly stops animations like beehives, flies, etc. Human animations still display...
    - Closing the crafting window closes the current craft item
    - Overall AC is now displayed in bottom left of equip screen
2/16/19
    - Softcap added in crafting window
    - Updated Calendar to be somewhat better
    - gfx/borka/body sounds only on unknown gobs or "bad" kins. By default bad kin = RED. Can be changed in options -> gameplay
        - May still hear yourself when loading in the game..
    - Added howl/timer sounds to sounds for Alerting
    - Circle radius no longer is half in the ground
    - Dead animals shouldn't show a ring anymore, if you find one that does ctrl + hover of it and show me the tooltip
    - Added back Shadow quality under Options -> Graphics. Anything under 1024 is basically all shadow. Highest setting
      is near perfect shadows
    - Changed nightvision -> Custom global light. Added in options to customize the color to your liking. Pure black of
    everything for maximum larp of course. Default is pure white for the cowards.
    - Skip Loading now works properly. Should no longer black screen, etc.