@@ -134,3 +134,6 @@
     - Changed nightvision -> Custom global light. Added in options to customize the color to your liking. Pure black of
     everything for maximum larp of course. Default is pure white for the cowards.
     - Skip Loading now works properly. Should no longer black screen, etc.
+2/17/19
+    - Any tracking/dowsing use now spawns a window "Drowse" that tells you the angles and lets you change the color
+      The angle will be visible until you close this window
